[taotao-cloud-project-1383] add [image combiner]