@@ -30,6 +30,9 @@ import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
  * --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
  * --add-opens java.base/java.math=ALL-UNNAMED
  * --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED
+ * --add-exports java.desktop/sun.awt=ALL-UNNAMED
+ * --add-opens java.desktop/sun.awt=ALL-UNNAMED
+ * --add-opens java.desktop/sun.font=ALL-UNNAMED
  *
  * @author shuigedeng
  * @version 1.0.0
